CSS fix overflow y

--- a/src/assets/scss/components/AppContainer.scss
+++ b/src/assets/scss/components/AppContainer.scss
@@ -1,6 +1,6 @@
 .app-container {
   position: relative;
-  overflow: auto;
+  overflow-y: hidden;
   max-width: 425px;
   width: 100%;
   height: 100%;
