--- a/src/assets/scss/pages/Dashboard.scss
+++ b/src/assets/scss/pages/Dashboard.scss
@@ -1,4 +1,5 @@
 .dashboard {
+  overflow-y: auto;
   background-color: $app-background-color;
   height: 100%;
 }
