--- a/src/assets/scss/pages/FormFriend.scss
+++ b/src/assets/scss/pages/FormFriend.scss
@@ -1,4 +1,5 @@
 .form-friend {
+  overflow-y: auto;
   display: flex;
   justify-content: center;
   height: 100%;
