--- a/src/assets/scss/pages/FriendDetail.scss
+++ b/src/assets/scss/pages/FriendDetail.scss
@@ -1,4 +1,5 @@
 .friend-detail {
+  overflow-y: auto;
   display: flex;
   justify-content: center;
   height: 100%;
