--- a/src/assets/scss/pages/FriendList.scss
+++ b/src/assets/scss/pages/FriendList.scss
@@ -1,4 +1,5 @@
 .friend-list {
+  overflow-y: auto;
   display: flex;
   justify-content: center;
   height: 100%;
