--- a/src/assets/scss/pages/Homepage.scss
+++ b/src/assets/scss/pages/Homepage.scss
@@ -1,4 +1,5 @@
 .homepage {
+  overflow-y: auto;
   display: flex;
   justify-content: center;
   align-items: center;
