--- a/src/assets/scss/pages/Onboarding.scss
+++ b/src/assets/scss/pages/Onboarding.scss
@@ -1,4 +1,5 @@
 .onboarding {
+  overflow-y: auto;
   display: flex;
   justify-content: center;
   align-items: center;
